updated a few spellings

--- a/hotels.html
+++ b/hotels.html
@@ -232,7 +232,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Hotels</h1>
                             <h2><b>We can't wait to celebrate this special day with you!</b></h2>
-                            <h2>To make your visit as comfortable as possible, we’ve reserved rooms at nearby hotels. We recommend booking early—these rooms won’t last long, and we’d love for everyone to stay close and keep the good times going all weekend!</h2>
+                            <h2>To make your visit as comfortable as possible, we’ve reserved rooms at nearby hotels. We recommend booking early, these rooms won’t last long, and we’d love for everyone to stay close and keep the good times going all weekend!</h2>
 
 						</div>
 					</div>
