--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline animate-box">
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/Virtual_meet.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">First Virtual Meet</h3>
@@ -314,7 +314,7 @@
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/Van_Gogh.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Our First Date <br>Van Gogh Immersive Experience</h3>
@@ -326,7 +326,7 @@
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/in_a_relationship.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">In A Relationship</h3>
@@ -338,7 +338,7 @@
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/moving.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Moving in together</h3>
@@ -350,7 +350,7 @@
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/international.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Making it International <br>Finland, Amsterdam and Tallinn</h3>
@@ -362,7 +362,7 @@
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/engaged.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Engaged</h3>
@@ -374,7 +374,7 @@
 							</div>
 						</li>
 						<li class="animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/engagement_party.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Engagement Party</h3>
@@ -386,14 +386,14 @@
 							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-badge" style="background-image:url(images/party.png);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Our Furry Family Members</h3>
 									<span class="date">April 28th, 2025</span>
 								</div>
 								<div class="timeline-body">
-									<p>Katie’s birthday brought the sweetest surprise when we welcomed a puppy, Mucca, into our family! Our little bundle of energy has filled our home with love, laughter, and endless wagging tails. Of course, he wasn’t starting from scratch, our cat, Yeti, quickly claimed the role of “older sibling.”
+									<p>Katie’s birthday brought the sweetest surprise when we welcomed a puppy, Mucca, into our family! Our little bundle of energy has filled our home with love, laughter, and endless wagging tails. Of course, she wasn’t starting from scratch, our cat, Yeti, quickly claimed the role of “older sibling.”
 
 									Like any siblings, Yeti and Mucca have their fair share of playful squabbles and dramatic standoffs, but when the day winds down, they’re the best of friends. Together, they’ve made our home warmer, our lives fuller, and our journey even more special.</p>
 								</div>
