Changed title to timeline and moved shuttle info to Accomodations

--- a/hotels.html
+++ b/hotels.html
@@ -211,10 +211,10 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="rsvp_engage.html">RSVP</a></li>
-						<li><a href="hotels.html">Accomodations</a></li>
+						<li><a href="hotels.html">Accomodations &amp; Shuttle </a></li>
 						<li><a href="index.html#fh5co-couple-story">Story</a></li>
 						<li><a href="index.html#fh5co-gallery">Gallery</a></li>
-						<li><a href="shuttle_info.html">Shuttle Info</a></li>
+						<li><a href="shuttle_info.html">Timeline</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="registry.html">Registry</a></li>
 					</ul>
@@ -276,6 +276,63 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/us.jpeg);">
+		<div class="overlay"></div>
+		<div class="fh5co-container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<div class="display-t">
+						<div class="display-tc animate-box" data-animate-effect="fadeIn">
+							<h1>Shuttle Info</h1>
+                            <h2>Complimentary shuttle transportation will be available from each hotel to the wedding venue. As departure times will vary based on ceremony timing and travel distance, we encourage guests to review the schedule below when planning their day.</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<div class="container custom-container">
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
+                <div class="custom-card">
+                    <div class="card-heading" style="font-size: 2rem;">
+                        <p>For guests attending the Indian cultural ceremony only</p>
+                    </div>
+                    <div class="card-image">
+                        <img src="temple.jpg" alt="Indian Temple">
+                    </div>
+                    <div class="card-address" style="line-height: 0.8; margin-top: 20px;">
+                        <p><b>Pickup from Spring Hill Suites: </b>11.40 AM</p>
+                        <p><b>Pickup from Miner's Camp </b>12.05 PM</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
+                <div class="custom-card">
+                    <div class="card-heading" style="font-size: 2rem;">
+                        <p>For guests attending the American ceremony only</p>
+                    </div>
+                    <div class="card-image">
+                        <img src="rings.jpg" alt="American Wedding Rings">
+                    </div>
+                    <div class="card-address" style="line-height: 0.8; margin-top: 20px;">
+                        <p><b>Pickup from Spring Hill Suites: </b>4:00 PM</p>
+                        <p><b>Pickup from Miner's Camp </b>4:40 PM</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+				<div class="custom-card">
+					<div style="text-align: center; color: black; font-size: 2rem;">
+						<p>PLEASE ARRIVE AT THE HOTEL PICKUP LOCATION <b>AT LEAST 10 MINS PRIOR</b> TO DEPARTURE</p>
+					</div>
+				</div>
+			</div>
         </div>
     </div>
 
