--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="rsvp_engage.html">RSVP</a></li>
-						<li><a href="hotels.html">Accomodations</a></li>
+						<li><a href="hotels.html">Accomodations &amp; Shuttle </a></li>
 						<li><a href="index.html#fh5co-couple-story">Story</a></li>
 						<li><a href="index.html#fh5co-gallery">Gallery</a></li>
-						<li><a href="shuttle_info.html">Shuttle Info</a></li>
+						<li><a href="shuttle_info.html">Timeline</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="registry.html">Registry</a></li>
 					</ul>
@@ -165,7 +165,7 @@
 							
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="d-flex align-items-center justify-content-center">
-								<p><a href="hotels.html" class="btn btn-default btn-sm">Accomodations & Timeline</a></p><a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="rsvp_engage.html" style="margin-bottom: 20px;">RSVP here</a>
+								<p><a href="hotels.html" class="btn btn-default btn-sm">Accomodations & Shuttle</a></p><a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="rsvp_engage.html" style="margin-bottom: 20px; padding-left: 50px; padding-right: 50px;">RSVP here</a><p><a class="btn btn-primary btn-primary-outline-0 py-3 px-5" href="shuttle_info.html" style="margin-bottom: 20px;">Timeline</a></p>
 							</div>
 						</div>
 					</div>
