--- a/rsvp_engage.html
+++ b/rsvp_engage.html
@@ -67,10 +67,10 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="rsvp_engage.html">RSVP</a></li>
-						<li><a href="hotels.html">Accomodations</a></li>
+						<li><a href="hotels.html">Accomodations &amp; Shuttle </a></li>
 						<li><a href="index.html#fh5co-couple-story">Story</a></li>
 						<li><a href="index.html#fh5co-gallery">Gallery</a></li>
-						<li><a href="shuttle_info.html">Shuttle Info</a></li>
+						<li><a href="shuttle_info.html">Timeline</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="registry.html">Registry</a></li>
 					</ul>
