--- a/shuttle_info.html
+++ b/shuttle_info.html
@@ -262,10 +262,10 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="rsvp_engage.html">RSVP</a></li>
-						<li><a href="hotels.html">Accomodations</a></li>
+						<li><a href="hotels.html">Accomodations &amp; Shuttle </a></li>
 						<li><a href="index.html#fh5co-couple-story">Story</a></li>
 						<li><a href="index.html#fh5co-gallery">Gallery</a></li>
-						<li><a href="shuttle_info.html">Shuttle Info</a></li>
+						<li><a href="shuttle_info.html">Timeline</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="registry.html">Registry</a></li>
 					</ul>
@@ -282,67 +282,13 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Shuttle Info</h1>
-                            <h2>Shuttle service will be provided from each hotel to the wedding venue. Please note that due to multiple ceremonies and the distance to the venue, shuttle departure times will vary. Kindly review the schedule below and plan accordingly.</h2>
+							<h1>Timeline</h1>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</header> 
-	
-	<div class="container custom-container">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
-                <div class="custom-card">
-                    <div class="card-heading">
-                        <p>For guests attending the Indian cultural ceremony only</p>
-                    </div>
-                    <div class="card-image">
-                        <img src="temple.jpg" alt="Indian Temple">
-                    </div>
-                    <div class="card-address">
-                        <p><b>Pickup from Spring Hill Suites: </b>11.40 AM</p>
-                        <p><b>Pickup from Miner's Camp </b>12.05 PM</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
-                <div class="custom-card">
-                    <div class="card-heading">
-                        <p>For guests attending the American ceremony only</p>
-                    </div>
-                    <div class="card-image">
-                        <img src="rings.jpg" alt="American Wedding Rings">
-                    </div>
-                    <div class="card-address">
-                        <p><b>Pickup from Spring Hill Suites: </b>4:00 PM</p>
-                        <p><b>Pickup from Miner's Camp </b>4:40 PM</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-				<div class="custom-card">
-					<div style="text-align: center; color: black; font-size: 2rem;">
-						<p>PLEASE ARRIVE AT THE HOTEL PICKUP LOCATION <b>AT LEAST 10 MINS PRIOR</b> TO DEPARTURE</p>
-					</div>
-				</div>
-			</div>
-        </div>
-    </div>
-	<div class="fh5co-container">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2 text-center">
-				<div class="display-t">
-					<div class="display-tc animate-box" data-animate-effect="fadeIn">
-						<h1>Shuttle Info</h1>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div class="container" style="justify-content: center; display: flex;">
 		<div class="timeline">
 			<div class="outer">
